--- a/src/frontend/styles/components/shared_widgets.styl
+++ b/src/frontend/styles/components/shared_widgets.styl
@@ -174,6 +174,7 @@ input
   flex: 1
   min-width: 0
   position: relative
+  overflow: hidden
 
 #main
   background-color: BACKGROUND_COLOR
